# Change Log
This file contains a log of major changes in letsencrypt.sh

## [x.x.x] - xxxx-xx-xx
### Changed
- PRIVATE_KEY config parameter has been renamed to ACCOUNT_KEY to avoid confusion with certificate keys
- deploy_cert hook now also has the certificates timestamp as standalone parameter
- Temporary files are now identifiable (template: letsencrypt.sh-XXXXXX)

### Added
- Added documentation to repository

### Fixed
- Fixed bug with uppercase names in domains.txt (script now converts everything to lowercase)
- mktemp no longer uses the deprecated `-t` parameter.

## [0.1.0] - 2016-03-25
### Changed
- This is the first numbered version of letsencrypt.sh